<resources>
    <string name="app_name">Finale</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome!</string>
    <string name="e_mail2">e-mail</string>
    <string name="password2">password</string>
    <string name="sign_in">Sign in</string>
    <string name="you_do_not_have_account_yet_sign_up">You do not have account yet? Sign up!</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_api_key">AIzaSyA0AFcgh8wFKA8DhpYePEbhgJbjo_n7Mpc</string>
</resources>